--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,6 +9,7 @@
   box-shadow: 6px 3px 3px grey;
   padding-bottom: 10px;
   margin-bottom: 20px;
+  position: relative;
 }
 
 .head {
@@ -44,4 +45,11 @@ hr {
   width: 25px;
   background-color: #c8fdb1;
   color: #000;
+}
+
+.itemsLeft {
+  position: absolute;
+  bottom: 5px;
+  right: 45px;
+  font: 400 12px "Montserrat";
 }
